# testing-frameworks

./: .gitignore  README.md  index.cpp
cpp/: CMakeLists.txt  Jenkinsfile  README.md  index.cpp  setup.sh
cpp/frameworks/: boost_test.cpp
cpp/frameworks/boost.test/: CMakeLists.txt  boost.test.cpp  boost_test.cpp
cpp/frameworks/catch2/: CMakeLists.txt  catch2.cpp  test.cpp
cpp/frameworks/googletest/: CMakeLists.txt  googletest.cpp
cpp/frameworks/gtest/: CMakeLists.txt  google_test.cpp
cpp/frameworks/unittest++/: CMakeLists.txt  unittest++.cpp
cpp/src/: CMakeLists.txt  index.cpp
frameworks/: boost_test.cpp
